# template-repo

./: .coderabbit.yaml  .editorconfig  .file-size-allow-list  .gitignore  .pre-commit-config.yaml  .prettierignore  BOOTSTRAP.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  biome.json  bootstrap.sh  package.json  pyproject.toml  tsconfig.base.json
.github/: pull_request_template.md
.github/rulesets/: README.md  merge-checks-org.json
.github/workflows/: codeowners-check.yml  file-size-gate.yml  lint.yml  quality.yml
docs/: CONVENTIONS.md  MIGRATION-CHECKLIST.md  ROADMAP.md
scripts/: check-file-size.sh  setup-hooks.sh
